<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".Kisah">

    <ImageButton
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="3dp"
        android:background="@color/white"
        android:src="@drawable/ic_home_black" />

    <ImageView
        android:id="@+id/k_img1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:src="@drawable/banner_kisah" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:src="@drawable/read" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/k_img1"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv1"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title1"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv2"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/angka2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title2"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv3"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title3"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv4"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title4"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv5"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title5"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv6"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title6"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv7"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title7"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv8"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title8"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv9"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title9"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv10"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title10"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv11"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka11" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title11"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv12"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka12" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title12"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/k_cv13"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/angka13" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="@string/title13"
                    android:textColor="@color/teal" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>