<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:src="@drawable/banner"
        android:layout_alignParentTop="true"
        android:id="@+id/img2"/>

    <RelativeLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/img2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv1"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="10sp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="33dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/quran" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/kisah"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv2"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_below="@+id/cv1"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="10sp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/mat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/rukun"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv3"
            android:layout_width="150dp"
            android:layout_height="130dp"
            android:layout_below="@+id/cv2"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="10sp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/moon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/poppinssemibold"
                android:text="@string/fakta"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</RelativeLayout>